@@ -249,7 +249,7 @@ int index::generate(const char *savefilename, std::string *errorstring, logoutpu
 	  if (lastiframe >= 0) {
 	    int framepts = mpgfile::frameratescr[framerate] / 300;
 	    pts_t ptsdelta = pts - p[lastiframe].getpts();
-	    int pdelta = pictures - lastiframe;
+	    int pdelta = pictures - lastiframe + seqnr - p[lastiframe].getsequencenumber();
 	    if (pdelta * framepts < ptsdelta)
 	      fprintf(stderr, "missing frames in GOP (%d, %d): %lld\n",
 		lastiframe, pictures, ptsdelta / framepts - pdelta);
